Bug 1623124 - Min used line-height for a single-line input element should be the font's 'normal' line-height. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D67180